--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "next-posts-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nkoblianskyi.github.io/next-posts-app/",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "export": "next export",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -17,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.86.2"
   },
   "devDependencies": {
@@ -26,7 +26,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "gh-pages": "^6.3.0",
     "typescript": "^5"
   }
 }
